test: 1달치 Schedule 데이터 생성 로직 변경
- 생성 전, 해당 스케줄 삭제 시 한방쿼리를 날리게되는데 이 때 영속성컨텍스트를 비우기보다 코드상으로 직접 삭제해줌.

Related: #46